--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
+    "@tanstack/react-virtual": "^3.13.18",
     "framer-motion": "^12.34.0",
     "next": "16.1.5",
     "react": "19.2.3",
