--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-popover": "^1.1.15",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
     "@tanstack/react-virtual": "^3.13.18",
     "framer-motion": "^12.34.0",
+    "lucide-react": "^0.564.0",
     "next": "16.1.5",
     "react": "19.2.3",
     "react-dom": "19.2.3"
